syntax = "proto3";
package sei.evm.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/sei-protocol/sei-chain/x/evm/types";

message Whitelist {
    repeated string hashes = 1 [
      (gogoproto.moretags) = "yaml:\"hashes\""
    ];
}

message DeferredInfo {
  uint32 tx_index = 1;
  bytes tx_hash = 2;
  bytes tx_bloom = 3;
  string surplus = 4 [
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
        (gogoproto.nullable)   = false
  ];
  string error = 5;
}
